# velopix_tracking

./: .gitignore  INSTALLATION.md  READMEv2.md  TrackFollowingLandscape.ipynb  installation_guide.md  manage_env.sh  readme.md  requirements.txt  test_rust_package.ipynb  validation_rust_debug.ipynb
OptimalisationMethods/: SMAC.ipynb  bayesian.ipynb  example_of_implementation.ipynb  grid_search.ipynb  new_bayesian_opt.ipynb  particleSwarm.ipynb  polyHOOT_deb1.ipynb  polyHOOT_dep0.ipynb  polyHOOT_new.ipynb  polyHOOT_v0.ipynb  polyHOOT_v1.ipynb  polyHOOT_v2.ipynb
VeloPix/: Cargo.toml  MANIFEST.in  __init__.py  _algorithm_schema.py  _parameter_optimisers.py  _velopix_pipeline.py  build.rs  velopix.pyi
VeloPix/src/: lib.rs
VeloPix/src/algorithms/: graph_dfs.rs  search_by_triplet_trie.rs
VeloPix/src/validator/: efficientcy.rs  helper.rs  validator.rs
config_generator/: Bayesian_base.json  Bayesian_spec.json  GridSearch_base.json  GridSearch_spec.json  ParticleSwarm_base.json  ParticleSwarm_spec.json  PolyHoot_base.json  make_all.bat  make_config.py
docs/: ALGO_DFS.md  ALGO_SearchByTripletTree.md  ALGO_TrackFollowing.md  DEVELOPER_GUIDE.md  INSTALLATION.md  (+4 more)
rust_algorithms/: Cargo.toml  build.rs  velopix_tracking.pyi
rust_algorithms/src/: lib.rs  mod.rs  validator.rs  validator_helper.rs
rust_algorithms/src/algorithms/: graph_dfs.rs  mod.rs  search_by_triplet_trie.rs  track_following.rs
rust_algorithms/src/event_model/: event.rs  hit.rs  mod.rs  module.rs  track.rs
rust_algorithms/src/validator/: efficientcy.rs  event.rs  helper.rs  helper_deprecated.rs  mc_particles.rs  mod.rs  validator.rs
(+763 files in other folders)
