[package]
name = "velopix"
authors = ["Sven Hockers"]
version = "0.7.7"
edition = "2021"
build = "build.rs"
license = "MIT"

[lib]
name = "velopix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
rayon = "1.5"
ordered-float = "3.6"
itertools = "0.10.5"

[package.metadata.maturin]
include = ["*.pyi"]
