[package]
name = "velopix_tracking"
authors = ["Sven Hockers"]
version = "0.7.5"
edition = "2021"
build = "build.rs"

[lib]
name = "velopix_tracking"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
rayon = "1.5"
ordered-float = "3.6"
itertools = "0.10.5"